[gd_scene load_steps=8 format=3 uid="uid://cjcoad8rdb8o2"]

[ext_resource type="Script" path="res://scenes/characters/player.gd" id="1_vvv8o"]
[ext_resource type="Texture2D" uid="uid://v1j3ag6pemrp" path="res://assets/player_spritesheet.png" id="2_2xia1"]
[ext_resource type="PackedScene" uid="uid://dqw1uy4d5a5va" path="res://scenes/characters/brevi_anim.tscn" id="3_okxv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjkkk"]
size = Vector2(13, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uoab"]
size = Vector2(21, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvaw6"]
bg_color = Color(0.741176, 0.341176, 0.0392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0784314, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l2v6"]
bg_color = Color(1, 0.85098, 0.258824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0784314, 0.105882, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_vvv8o")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2xia1")
offset = Vector2(0, -12)
hframes = 15
region_rect = Rect2(576, 0, 64, 64)

[node name="VerticalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_yjkkk")

[node name="HorizontalCollision" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -9)
shape = SubResource("RectangleShape2D_3uoab")

[node name="PlayerAnim" parent="." instance=ExtResource("3_okxv4")]

[node name="SquashTimer" type="Timer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="GlideStaminaBar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -21.0
offset_right = -17.0
offset_bottom = -4.0
theme_override_constants/outline_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_pvaw6")
theme_override_styles/fill = SubResource("StyleBoxFlat_0l2v6")
max_value = 1.0
step = 0.001
value = 1.0
fill_mode = 3
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[connection signal="timeout" from="SquashTimer" to="." method="_on_squash_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
